# memcached

daemon/: CMakeLists.txt  buckets.h  collections.cc  collections.h  collections_validators.cc  config_parse.cc  connection.cc  connection.h  connection_mcbp.cc  connection_mcbp.h  connections.cc  connections.h  function_chain.h  mcaudit.cc  mcbp_executors.cc  mcbp_privileges.cc  mcbp_validators.cc  memcached.c  memcached.cc  settings.h  subdocument.cc  thread.c  thread.cc
daemon/protocol/mcbp/: collections_set_manifest.cc  collections_set_manifest.h  dcp_control_executor.cc  dcp_deletion.cc  dcp_mutation.cc  dcp_system_event.cc  dcp_system_event.h  engine_wrapper.cc  get_context.h  get_locked_context.h  hello_packet_executor.cc  mutation_context.cc  unlock_context.h
engines/bucket_engine/: bucket_engine.c
engines/default_engine/: assoc.c  items.c
engines/ewouldblock_engine/: ewouldblock_engine.cc
engines/nobucket/: nobucket.cc
etc/: memcached_descriptor.json
extensions/loggers/: file_logger.c
include/memcached/: collections.h  dcp.h  engine.h  protocol_binary.h  types.h
programs/engine_testapp/: engine_testapp.cc
tests/: CMakeLists.txt
tests/collections/: CMakeLists.txt  collections_test.cc
tests/testapp/: testapp.cc  testapp_audit.cc  testapp_bucket.cc
utilities/: config_parser.c  protocol2text.cc
